[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "pomBseen"
version = "0.0.2"
authors = [
    {name = "Timon Stegmaier", email = "timonst2000@gmail.com"},
]
readme = "README.md"
dependencies = [
    "numpy",
    "scikit-image",
]
description = "pomBseen segmentation for Cell-ACDC"
requires-python = ">=3.9"
license = {text = "BSD-3-Clause"}